app is starting to be something

--- a/HackCafeProject/app/src/main/res/values/strings.xml
+++ b/HackCafeProject/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Hack Cafe Project</string>
     <string name="hackcafe">HackCafe</string>
     <string name="hackCafe">Hack Cafe</string>
+    <string name="_97166666">97166666</string>
 </resources>
